--- a/example_1.qmd
+++ b/example_1.qmd
@@ -43,141 +43,84 @@ format:
       [https://github.com/nmfs-opensci](https://github.com/nmfs-opensci)\
     keep-tex: true
 ---
+# 1 The Assignment
 
+## 1.1 Company Profile
+Describe the commissioning organization (Value Chain Hackers Lab within Windesheim). Include mission, role, and relevant context.  
 
-## YAML additions for themes
+## 1.2 Problem Statement
+Explain the specific operational or innovation problem. Show why it matters at micro, meso, and macro level. Support with evidence.  
 
-Some themes need some additional YAML information to work.
+## 1.3 The Goal and Objective
+State the overarching goal and concrete objectives. Explain what the project should achieve and how success can be measured.  
 
-### `bg-image`
+## 1.4 Match to the Micro Innovation Track and Personal Fit
+Explain why this is a proper Micro Innovation assignment. Show how it connects to your interests, strengths, and future ambitions.  
 
-Needs info on the title page geometry so the title doesn't overlap the background image. Also you need to supply the background image and where to put it (UL, upperleft; UR, upperright; BL, bottomleft; BR, bottomright). Note, there are placeholders in the extension, but when you put your own image in, you'll need to add the YAML information.
+## 1.5 Confirmed Client Requirements
+Summarize the requirements agreed with the client. Mention scope, expectations, deliverables, and validation needs.  
 
-```
-format: 
-  titlepage-pdf:
-    titlepage: bg-image
-    titlepage-geometry: 
-     - top=3in
-     - bottom=1in
-     - right=1in
-     - left=1in
-    titlepage-bg-image: "img/corner-bg.png"
-    titlepage-theme:
-      bg-image-location: "UL"
-      bg-image-size: 0.5
-```
+## 1.6 Ambition Statement
+Clarify the ambition of the project in professional terms. Show the added value for client and your own growth.  
 
+## 1.7 BI Meta-skills Mapping
+Explain how you will apply and demonstrate Define, Design, Execute, Learn, Lead. Use examples from the assignment.  
 
-## Document classes
+## 1.8 Trends and Developments
+Summarize relevant external trends, developments, and scenarios (past, present, near future) that justify the project.  
 
-The document class changes the look of your document. For the book document classes, you will need to pass in 
-```
-number-sections: true
-```
-in your YAML because Quarto sets `number-sections: false` by default and that will mess up all your equation, figure and table numbers. It simple will not number them correctly at all.
+## 1.9 Why This Assignment Is Important
+Conclude why this project matters — to the lab, partners, and your own development.  
 
-For book document classes (like `scrbook`), if you want chapters to be allowed to start on even or odd pages and the left and right margins on even and odd pages to be the same, use
+# 2 Research Design
 
-```
-classoption: ["oneside", "open=any"]
-```
+## 2.1 Main Research Question
+Formulate one clear and researchable question.  
 
-# Introduction
+## 2.2 Sub-questions
+Provide several sub-questions that together answer the main one. Cover 5W1H logic.  
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin eu tempor velit. Fusce accumsan ultrices fringilla. Praesent sed odio mi. Mauris non ligula turpis. Duis posuere lacus nec diam interdum dictum suscipit magna molestie. Vestibulum nibh dolor, interdum eget rhoncus ut, sodales eget justo. Morbi blandit lorem sit amet nulla egestas aliquam. Nunc pharetra est at nibh ullamcorper in commodo erat dignissim. Cras et suscipit enim.
+## 2.3 Hypothesis
+State a testable proposition based on the expected effect of your solution.  
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neque ex, vehicula dictum risus fermentum, feugiat faucibus neque. Etiam purus quam, lacinia vel porta in, malesuada ac nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed bibendum placerat tellus, ac finibus lectus euismod eget.
+## 2.4 Research Methodology
+Describe the approach, data sources, research population, collection, and analysis methods. Show feasibility.  
 
-Nulla mattis diam vitae bibendum consequat. Etiam vitae eros tristique, porta sapien a, aliquet mauris. Praesent ultricies mi nulla, et dignissim nulla mattis at. Fusce rhoncus leo quis odio euismod, hendrerit facilisis risus tincidunt. Aenean at lectus justo. Cras fringilla lacus nisl, ac convallis odio tincidunt vel. Integer vel egestas nisi. Curabitur vitae imperdiet justo.
+## 2.5 Validation Logic from Previous Research
+Show how prior studies/frameworks will inform your design. Mention benchmarking and feasibility testing.  
 
-> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\
+## 2.6 Filing System and Data Management Approach
+Explain how data, notes, and results will be stored, versioned, and shared.  
 
-## Supporting theory
+# 3 Project Design
 
-Let $X_1, X_2, \ldots, X_n$ be a sequence of independent and identically distributed random variables with $\text{E}[X_i] = \mu$ and $\text{Var}[X_i] = \sigma^2 < \infty$, and let
+## 3.1 Project Planning and Timeline
+Present the timeline across the full graduation project (milestones, sprints, phases).  
 
-$$
-S_n = \frac{X_1 + X_2 + \cdots + X_n}{n}
-      = \frac{1}{n}\sum_{i}^{n} X_i
-$$ {#eq-clt}
+## 3.2 Stakeholder Analysis and Role Division
+Identify stakeholders, what is at stake for each, and their roles/responsibilities.  
 
-denote their mean. Then as $n$ approaches infinity, the random variables $\sqrt{n}(S_n - \mu)$ converge in distribution to a normal $\mathcal{N}(0, \sigma^2)$. Thus concludes the explanation about @eq-clt.
+## 3.3 Required Resources
+List resources (tools, access, support) and assess feasibility.  
 
-You can also use the LaTeX equation environment (equation, align, gather, etc) syntax, such as:
-```
-\begin{equation} \label{eq-eq2}
-\int_{A_i}{\lambda (\mathbf{x})}
-\end{equation} 
-```
+## 3.4 Risks and Mitigation Strategies
+Identify obvious and less obvious risks, and how you will deal with them.  
 
-The equation appears as
-\begin{equation} \label{eq-eq2}
-\int_{A_i}{\lambda (\mathbf{x})}
-\end{equation} 
-But in this case, you cannot use `@eq-eq2` to reference the equation. You need to use `\ref{eq-eq2}`. You will need to add `Equation` if you want that prefix, e.g. Equation \ref{eq-eq2} or @eq-eq2.
+## 3.5 Criteria and Specifications for Deliverables
+Define scope, criteria, and specifications for final outputs and intermediate results.  
 
+## 3.6 Milestones and Checkpoints
+Set out key milestones, expected outputs, validation actions, and timing.  
 
-# Materials and Methods
+## 3.7 Success Criteria
+Explain how success will be judged by both client and assessment board.  
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neque ex, vehicula dictum risus fermentum, feugiat faucibus neque. Etiam purus quam, lacinia vel porta in, malesuada ac nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed bibendum placerat tellus, ac finibus lectus euismod eget.
+## 3.8 Location for Shared Data, Files, and Updates
+State where materials will be stored and how progress will be monitored.  
 
-## Study area
+# 4 APA Reference List
+Provide all references in APA style. Ensure accuracy and consistency.  
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neque ex, vehicula dictum risus fermentum, feugiat faucibus neque. Etiam purus quam, lacinia vel porta in, malesuada ac nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed bibendum placerat tellus, ac finibus lectus euismod eget. Nulla mattis diam vitae bibendum consequat.
+# 5 Appendix
+Include supporting material such as transcripts, templates, stakeholder input, or planning visuals.  
 
-![the study area](img/logo.png){#fig-logo}
-
-See @fig-logo for a picture of the study area. Etiam vitae eros tristique, porta sapien a, aliquet mauris. Praesent ultricies mi nulla, et dignissim nulla mattis at. Fusce rhoncus leo quis odio euismod, hendrerit facilisis risus tincidunt. Aenean at lectus justo. Cras fringilla lacus nisl, ac convallis odio tincidunt vel. Integer vel egestas nisi. Curabitur vitae imperdiet justo.
-
-Curabitur efficitur in risus quis egestas. Suspendisse porta interdum leo ac ultricies. Pellentesque bibendum, felis vitae fermentum eleifend, nunc nunc fermentum nisi, ac maximus felis lacus lobortis risus. Suspendisse potenti. Nunc vitae consequat elit. Fusce id ligula sed lectus condimentum laoreet. Vestibulum faucibus commodo suscipit. Nulla tempor tellus vel massa efficitur euismod. Duis nec commodo mauris, sit amet tincidunt elit. Cras mollis non ante sed venenatis. In ultricies ante accumsan lectus rhoncus, vel pharetra sem convallis.
-
-# Results
-
-See @tbl-numbers for the table of results. Phasellus quis orci nec erat suscipit imperdiet. Aenean pulvinar enim ut ante convallis, vel sollicitudin purus malesuada. Sed sed ullamcorper urna. Morbi sed lobortis neque, sit amet hendrerit magna. Donec ultricies pretium lorem, eget sagittis metus posuere et. Aenean ex purus, aliquam sit amet tellus ut, pellentesque porttitor orci. Integer quis mi pharetra, bibendum neque nec, viverra nulla. Cras quis magna in erat facilisis consequat. Vivamus sed lectus iaculis, euismod ligula eu, fermentum sem.
-
-| Thing | Value |
-|:------|------:|
-| A 42  |    18 |
-| B 15  |    18 |
-| C 34  |    17 |
-| D 99  |    24 |
-
-: Table of numbers. {#tbl-numbers}
-
-# Discussion
-
-Lorem ipsum dolor sit amet, @tbl-numbers, consectetur adipiscing elit. @knuth84 and all things LaTeX. Phasellus neque ex, vehicula dictum risus fermentum, feugiat faucibus neque. Etiam purus quam, lacinia vel porta in, malesuada ac nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed bibendum placerat tellus, ac finibus lectus euismod eget. Nulla mattis diam vitae bibendum consequat. Etiam vitae eros tristique, porta sapien a, aliquet mauris. Praesent ultricies mi nulla, et dignissim nulla mattis at. Fusce rhoncus leo quis odio euismod, hendrerit facilisis risus tincidunt. Aenean at lectus justo. Cras fringilla lacus nisl, ac convallis odio tincidunt vel. Integer vel egestas nisi. Curabitur vitae imperdiet justo.
-
-Curabitur efficitur in risus quis egestas. Suspendisse porta interdum leo ac ultricies. Pellentesque bibendum, felis vitae fermentum eleifend, nunc nunc fermentum nisi, ac maximus felis lacus lobortis risus. Suspendisse potenti. Nunc vitae consequat elit. Fusce id ligula sed lectus condimentum laoreet. Vestibulum faucibus commodo suscipit. Nulla tempor tellus vel massa efficitur euismod. Duis nec commodo mauris, sit amet tincidunt elit. Cras mollis non ante sed venenatis. In ultricies ante accumsan lectus rhoncus, vel pharetra sem convallis.
-
-Phasellus quis orci nec erat suscipit imperdiet. Aenean pulvinar enim ut ante convallis, vel sollicitudin purus malesuada. Sed sed ullamcorper urna. Morbi sed lobortis neque, sit amet hendrerit magna. Donec ultricies pretium lorem, eget sagittis metus posuere et. Aenean ex purus, aliquam sit amet tellus ut, pellentesque porttitor orci. Integer quis mi pharetra, bibendum neque nec, viverra nulla. Cras quis magna in erat facilisis consequat. Vivamus sed lectus iaculis, euismod ligula eu, fermentum sem.
-
-Quisque congue, ligula et mattis vulputate, arcu risus facilisis mauris, a feugiat mi mi et magna. Aliquam id malesuada neque. Sed dapibus justo mauris, sed mattis nibh sodales sit amet. Donec nec faucibus magna. Curabitur tincidunt porta egestas. In eleifend sed enim ac varius. Vivamus tempus ultrices vehicula. Vestibulum iaculis eleifend mattis. Quisque euismod dui et velit facilisis dapibus. Ut in mauris porttitor, congue orci et, sodales turpis. Pellentesque porttitor volutpat sapien vel pretium.
-
-Aliquam ante diam, euismod in nisi sed, iaculis tincidunt lacus. Cras pellentesque magna id enim pulvinar porta. Proin quis feugiat quam. Nunc vitae ultricies nulla, a facilisis tortor. Aliquam semper mi et libero tincidunt, nec iaculis erat pharetra. Duis ac pharetra purus. Nunc condimentum ex massa, a vestibulum risus bibendum in. Suspendisse suscipit, lectus pharetra vulputate fringilla, ligula sem condimentum purus, eget dapibus diam libero vitae lorem. Nam blandit pulvinar augue, non gravida risus rhoncus sed.
-
-# Conclusion
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus neque ex, vehicula dictum risus fermentum, feugiat faucibus neque. Etiam purus quam, lacinia vel porta in, malesuada ac nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Sed bibendum placerat tellus, ac finibus lectus euismod eget. Nulla mattis diam vitae bibendum consequat. Etiam vitae eros tristique, porta sapien a, aliquet mauris. Praesent ultricies mi nulla, et dignissim nulla mattis at. Fusce rhoncus leo quis odio euismod, hendrerit facilisis risus tincidunt. Aenean at lectus justo. Cras fringilla lacus nisl, ac convallis odio tincidunt vel. Integer vel egestas nisi. Curabitur vitae imperdiet justo.
-
-Curabitur efficitur in risus quis egestas. Suspendisse porta interdum leo ac ultricies. Pellentesque bibendum, felis vitae fermentum eleifend, nunc nunc fermentum nisi, ac maximus felis lacus lobortis risus. Suspendisse potenti. Nunc vitae consequat elit. Fusce id ligula sed lectus condimentum laoreet. Vestibulum faucibus commodo suscipit. Nulla tempor tellus vel massa efficitur euismod. Duis nec commodo mauris, sit amet tincidunt elit. Cras mollis non ante sed venenatis. In ultricies ante accumsan lectus rhoncus, vel pharetra sem convallis.
-
-Phasellus quis orci nec erat suscipit imperdiet. Aenean pulvinar enim ut ante convallis, vel sollicitudin purus malesuada. Sed sed ullamcorper urna. Morbi sed lobortis neque, sit amet hendrerit magna. Donec ultricies pretium lorem, eget sagittis metus posuere et. Aenean ex purus, aliquam sit amet tellus ut, pellentesque porttitor orci. Integer quis mi pharetra, bibendum neque nec, viverra nulla. Cras quis magna in erat facilisis consequat. Vivamus sed lectus iaculis, euismod ligula eu, fermentum sem.
-
-Quisque congue, ligula et mattis vulputate, arcu risus facilisis mauris, a feugiat mi mi et magna. Aliquam id malesuada neque. Sed dapibus justo mauris, sed mattis nibh sodales sit amet. Donec nec faucibus magna. Curabitur tincidunt porta egestas. In eleifend sed enim ac varius. Vivamus tempus ultrices vehicula. Vestibulum iaculis eleifend mattis. Quisque euismod dui et velit facilisis dapibus. Ut in mauris porttitor, congue orci et, sodales turpis. Pellentesque porttitor volutpat sapien vel pretium.
-
-Aliquam ante diam, euismod in nisi sed, iaculis tincidunt lacus. Cras pellentesque magna id enim pulvinar porta. Proin quis feugiat quam. Nunc vitae ultricies nulla, a facilisis tortor. Aliquam semper mi et libero tincidunt, nec iaculis erat pharetra. Duis ac pharetra purus. Nunc condimentum ex massa, a vestibulum risus bibendum in. Suspendisse suscipit, lectus pharetra vulputate fringilla, ligula sem condimentum purus, eget dapibus diam libero vitae lorem. Nam blandit pulvinar augue, non gravida risus rhoncus sed.
-
-# Author Contributions
-
-Author1 designed the research. Author2 carried out all simulations, analyzed the data. Author1 and Author2 wrote the article.
-
-# Acknowledgments
-
-We thank G. Harrison, B. Harper, and J. Doe for their help.
-
-# References
-
-::: {#refs}
-:::
